Removed display: flex; from card title - this fixed my issue with spacing in the title

--- a/style.css
+++ b/style.css
@@ -3,11 +3,8 @@
 }
 
 a {
-
     text-decoration: none;
     color: #9ea4b2;
-
-
 }
 
 body {
@@ -16,7 +13,6 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-
 }
 
 .header {
@@ -28,14 +24,13 @@ body {
     top: 0;
     left: 0;
     right: 0;
-   }
+}
 
 #textlogo {
     font-family: 'Brush Script MT';
     color: white;
     font-size: 30px;
     margin: 0;
-
 }
 
 .links {
@@ -66,8 +61,6 @@ body {
     flex: 1;
     width: 500px;
     height: 300px;
-
-
 }
 
 .imagecards {
@@ -86,8 +79,8 @@ body {
     flex-direction: column;
     text-align: center;
     max-width: 200px;
-
 }
+
 .smallphotos
 p {
     color: #9ea4b2;
@@ -95,7 +88,6 @@ p {
 
 .allcards {
     display: flex;
-
 }
 
 .quote {
@@ -105,8 +97,7 @@ p {
     flex-direction: column;
     flex: 1;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center; 
 }
 
 h1 {
@@ -114,19 +105,15 @@ h1 {
 }
 
 .cardtitle {   
-    display: flex;
     margin-top: 0;
     margin-bottom: 50px;
-
-
 }
+
 .smallphoto {
     width: 100px;
     height: 100px;
     border-radius: 10px;
     border: 4px solid rgb(98, 176, 159);
-
-
 }
 
 .c2a {
@@ -135,6 +122,7 @@ h1 {
     flex: 1;
     flex-direction: column;
 }
+
 .c2acard {
     background-color: rgb(74, 101, 95);
     display: flex;
@@ -142,7 +130,6 @@ h1 {
     border-radius: 10px;
     justify-content: space-around;
     align-items: center;
-
 }
 
 
@@ -152,13 +139,12 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
+
 .footer
 p {
     font-size: 12px;
     color: #9ea4b2;
-
 }
 
 button {
@@ -168,5 +154,4 @@ button {
     width: 100px;
     height: 40px;
     border: none;
-
 }
